--- a/WebsiteCode/WorksiteDotCom/templates/home.html
+++ b/WebsiteCode/WorksiteDotCom/templates/home.html
@@ -5,4 +5,20 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
     </head>
+
+    <body>
+        <div class=row>
+            <div class="col-md-4 col-xs-12">
+                <div class=scroll-bar>
+                    Projects
+                </div>
+                <div class=scroll-bar>
+                    Companies
+                </div>
+                <div class=scroll-bar>
+                    Me
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
