--- a/WebsiteCode/WorksiteDotCom/templates/home.html
+++ b/WebsiteCode/WorksiteDotCom/templates/home.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <html>
     <head>
     <title>Mathakan Website</title>
@@ -9,12 +11,16 @@
     <body>
         <div class=row>
             <div class="col-md-4 col-xs-12">
-                <div class=scroll-bar>
+                <button type='button'class='btn'>
                     Projects
-                </div>
+                </button>
+            </div>
+            <div class="col-md-4 col-xs-12">
                 <div class=scroll-bar>
                     Companies
                 </div>
+            </div>
+            <div class="col-md-4 col-xs-12">
                 <div class=scroll-bar>
                     Me
                 </div>
